# acter-ner

./: .gitignore  README.md  pyproject.toml
notebooks/: acter-cvalue-conf2-25-roberta-large-en.ipynb  acter-cvalue-original-roberta-large-en.ipynb  acter-cvalue-rerank-annotation-debugging.ipynb  acter-cvalue-rerank-annotation-exploration.ipynb  acter-cvalue-rerank-annotation-plus.ipynb  acter-cvalue-rerank-annotation.ipynb  acter-gliner-large-en.ipynb  acter-gliner-large-v2.0.ipynb  acter-gliner-multi.ipynb  acter-gliner-multilingual.ipynb  acter-gliner-nuner-en.ipynb  acter-gliner-small-en.ipynb  acter-gliner-small.ipynb  acter-heuristics-multilingual.ipynb  acter-nuner-rerank.ipynb  acter-rerank-conf0-4-roberta-large-en.ipynb  acter-rerank-min-roberta-large-en.ipynb  acter-rerank-original-roberta-large-en.ipynb  acter-roberta-large-multilingual.ipynb  acter-roberta-xlarge-en-fr-nl.ipynb  acter-roberta-xlarge-en-fr.ipynb  acter-roberta-xlarge-en.ipynb  acter-roberta-xlarge-ml-en-fr-nl.ipynb  acter-silver.ipynb  acter-xlm-roberta-large-en.ipynb  acter-xlm-roberta-large-multilingual.ipynb  baseline-roberta-large.ipynb  dry-run  evaluate_with_extractomat.ipynb
term_extractor/: Untitled.ipynb  combine_corpora-en-fr-nl.sh  combine_corpora-en-fr.sh  combine_corpora.sh  combine_corpora_gliner.sh  combine_corpora_gliner_multi.sh  convert_acter_to_extractomat_valset.py  dataset_processor.py  gliner_component.py  preprocess_acter.py  preprocess_acter_gliner.py  test_full.tsv  train_full.tsv  train_model.py  train_spacy_model.py  utils.py
term_extractor/configs/: config_base.cfg  (+6 more)
(+4 files in other folders)
