[tool.poetry]
name = "acter-ner"
version = "0.1.0"
description = ""
authors = ["rkovalch <mrbylba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spacy = {extras = ["cuda121"], version = "^3.8.5"}
spacy-transformers = "^1.3.8"
torch = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
